[FIX] middle layout not showing in mobile

--- a/src/app/dashboard/song-list/layout-manager/layout-manager.component.scss
+++ b/src/app/dashboard/song-list/layout-manager/layout-manager.component.scss
@@ -37,3 +37,8 @@
         }
     }
 }
+@media only screen and (max-width: 750px) {
+    .list-compact-view-label {
+        display: none !important;
+    }
+}
